Enhance mobile build workflow by making Gradle wrapper executable
- Added a step to make the Gradle wrapper executable in the Android build process to prevent permission issues during the build.

--- a/.github/workflows/mobile-build.yml
+++ b/.github/workflows/mobile-build.yml
@@ -39,6 +39,11 @@ jobs:
         run: |
           npx @capacitor/cli sync
 
+      - name: Make Gradle wrapper executable
+        run: |
+          cd android
+          chmod +x ./gradlew
+
       - name: Build Android APK
         run: |
           cd android
