--- a/.github/workflows/mobile-build.yml
+++ b/.github/workflows/mobile-build.yml
@@ -44,10 +44,15 @@ jobs:
           cd android
           chmod +x ./gradlew
 
+      - name: Set JAVA_HOME explicitly
+        run: |
+          echo "JAVA_HOME=$JAVA_HOME" >> $GITHUB_ENV
+          echo "Using Java from: $JAVA_HOME"
+
       - name: Build Android APK
         run: |
           cd android
-          ./gradlew assembleDebug
+          ./gradlew assembleDebug --stacktrace
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
@@ -73,6 +78,9 @@ jobs:
 
       - name: Build web app
         run: npm run build
+
+      - name: Update browserslist database
+        run: npx update-browserslist-db@latest
 
       - name: Sync Capacitor
         run: |
