Update mobile build workflow and Android properties
- Added Java version check in the mobile build workflow for better debugging.
- Modified Gradle build command to include detailed logging.
- Removed the step to update the browserslist database from the web app build process.
- Cleaned up the Android gradle.properties file by removing the Java compatibility version setting.

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -24,8 +24,7 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
-# Set Java compatibility version
-org.gradle.java.home=
+# Android build features
 android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
