--- a/.github/workflows/mobile-build.yml
+++ b/.github/workflows/mobile-build.yml
@@ -48,11 +48,12 @@ jobs:
         run: |
           echo "JAVA_HOME=$JAVA_HOME" >> $GITHUB_ENV
           echo "Using Java from: $JAVA_HOME"
+          java -version
 
       - name: Build Android APK
         run: |
           cd android
-          ./gradlew assembleDebug --stacktrace
+          ./gradlew assembleDebug --info --stacktrace
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
@@ -78,9 +79,6 @@ jobs:
 
       - name: Build web app
         run: npm run build
-
-      - name: Update browserslist database
-        run: npx update-browserslist-db@latest
 
       - name: Sync Capacitor
         run: |
