--- a/.github/workflows/mobile-build.yml
+++ b/.github/workflows/mobile-build.yml
@@ -16,12 +16,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
         with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: gradle
+          java-version: 1.8
+
+      - name: Install Android SDK
+        uses: android-actions/setup-android@v2
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -36,26 +37,20 @@ jobs:
         run: npm run build
 
       - name: Sync Capacitor
-        run: |
-          npx @capacitor/cli sync
+        run: npx @capacitor/cli sync
 
-      - name: Make Gradle wrapper executable
+      - name: Convert Windows line endings to Linux
         run: |
-          cd android
+          sudo apt update && sudo apt install dos2unix
+          cd android && dos2unix ./gradlew
           chmod +x ./gradlew
 
-      - name: Set JAVA_HOME explicitly
-        run: |
-          echo "JAVA_HOME=$JAVA_HOME" >> $GITHUB_ENV
-          echo "Using Java from: $JAVA_HOME"
-          java -version
-
-      - name: Build Android APK
+      - name: Build Debug APK
         run: |
           cd android
-          ./gradlew assembleDebug --info --stacktrace
+          ./gradlew assembleDebug --stacktrace
 
-      - name: Upload APK
+      - name: Upload Debug APK
         uses: actions/upload-artifact@v4
         with:
           name: app-debug
