--- a/.github/workflows/mobile-build.yml
+++ b/.github/workflows/mobile-build.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          distribution: 'zulu'
           java-version: '17'
 
       - name: Install Android SDK
@@ -47,7 +47,7 @@ jobs:
           chmod +x ./gradlew
 
       - name: Build Debug APK
-        run: cd android && ./gradlew bundle && ./gradlew assembleDebug
+        run: cd android && ./gradlew bundle
 
       - name: Upload Debug APK
         uses: actions/upload-artifact@v4
