--- a/.github/workflows/mobile-build.yml
+++ b/.github/workflows/mobile-build.yml
@@ -10,52 +10,6 @@ on:
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
-  build-android:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'zulu'
-          java-version: '17'
-
-      - name: Install Android SDK
-        uses: android-actions/setup-android@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build web app
-        run: npm run build
-
-      - name: Sync Capacitor
-        run: npx @capacitor/cli sync
-
-      - name: Convert Windows line endings to Linux
-        run: |
-          sudo apt update && sudo apt install dos2unix
-          cd android && dos2unix ./gradlew
-          chmod +x ./gradlew
-
-      - name: Build Debug APK
-        run: cd android && ./gradlew bundle
-
-      - name: Upload Debug APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-debug
-          path: android/app/build/outputs/apk/debug/app-debug.apk
-          retention-days: 14
-
   build-ios:
     runs-on: macos-latest
     steps:
@@ -97,7 +51,7 @@ jobs:
           retention-days: 14
 
   create-release:
-    needs: [build-android, build-ios]
+    needs: [build-ios]
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
